--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ p {
 
 @media screen and (max-width: 550px) {
 
+    body {
+      background-color: #323232;
+    }
+
     .container {
     width: 100%;
   }
